complete distribured poc of a generic policy engien